# sopds

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.cjs  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  compose.yml  entrypoint.sh  env.docker  env.example  pyproject.toml  pyproject.toml.example  requirements-override.txt  superuser.py
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-pr-description.yml  codeql.yml  docker.yaml  lint_and_test.yaml  mirror-source-branch.yaml
assets/sopds-sass/: README.md  gulpfile.js  package-lock.json  package.json
assets/sopds-sass/scripts/: copy-vendor.mjs
assets/sopds-sass/scss/: _settings.scss  sopds.scss
assets/sopds-sass/tests/: foundation.test.mjs
book_tools/_vendor/: __init__.py
book_tools/_vendor/fbreader/: LICENSE  __init__.py  aes.py  bookfile.py  epub.py  fb2.py  mimetype.py  mobi.py  util.py
book_tools/format/: __init__.py  aes.py  bookfile.py  ebook.py  epub.py  fb2.py  fb2sax.py  mimetype.py  mobi.py  other.py  util.py
book_tools/pymobi/: __init__.py  compression.py  mobi.py  util.py
book_tools/tests/: test_aes.py  test_bookfile.py  test_detect_mime.py  test_mimetype.py  test_other.py  test_parsers.py  test_util.py
config/: logging_filters.py  settings.py  urls.py  wsgi.py
config/locale/ru/LC_MESSAGES/: django.mo  django.po
opds_catalog/: admin.py  apps.py  dl.py  fb2parse.py  feeds.py  inpx_parser.py  middleware.py  models.py  opds_paginator.py  opdsdb.py  scan_lock.py  scan_parser.py  scan_types.py  settings.py  sopdscan.py  urls.py  utils.py  worker_init.py  zipf.py
opds_catalog/fixtures/: testdb.json
opds_catalog/locale/ru/LC_MESSAGES/: django.mo  django.po
opds_catalog/management/commands/: sopds_scanner.py  sopds_server.py  sopds_telebot.py  sopds_util.py
opds_catalog/migrations/: 0001_initial.py  0002_auto_20161115_1810.py  0003_auto_20161116_0955.py  0004_auto_20161116_1852.py  0005_auto_20161204_2138.py  0006_alter_author_id_alter_bauthor_id_alter_bgenre_id_and_more.py  0007_bookshelf_bookshelf_user_readtime_idx.py  0008_unique_relation_constraints.py  0009_unique_entity_constraints.py  0010_remove_author_search_full_name_and_more.py
opds_catalog/templates/: opensearch.html
opds_catalog/tests/: test_constance.py  test_directory_discovery.py  test_dl.py  test_feeds.py  test_inpx_parser.py  test_management_commands.py  test_middleware.py  test_models.py  test_opdsdb.py  test_parsers.py  test_scan.py  test_scan_lock.py  test_scan_types.py  test_utils.py  test_worker_init.py  test_zipf.py
ops/: apps.py  health.py
ops/management/: supervisor.py
ops/management/commands/: dev.py  start.py
ops/tests/: test_commands.py  test_health.py  test_logging.py  test_settings.py  test_supervisor.py  test_urls.py
sopds/: settings.py  urls.py
sopds/locale/ru/LC_MESSAGES/: django.po
sopds_web_backend/: apps.py  urls.py  views.py
sopds_web_backend/templates/: sopds_footer.html
sopds_web_backend/tests/: test_views.py
web_backend/: apps.py  settings.py  timezone.py  urls.py  views.py
web_backend/locale/ru/LC_MESSAGES/: django.mo  django.po
web_backend/static/admin/css/: base.css
web_backend/static/css/: components.css  foundation-flex.min.css  foundation-rtl.min.css
web_backend/static/js/: timezone.js
web_backend/templates/: sopds_authors.html  sopds_books.html  sopds_breadcrumbs.html  sopds_catalogs.html  sopds_error.html  sopds_footer.html  sopds_footer_book.html  sopds_hello.html  sopds_login.html  sopds_logo.html  sopds_main.html  sopds_menu.html  sopds_messages.html  sopds_selectauthor.html  sopds_selectbook.html  sopds_selectgenres.html  sopds_selectseries.html  sopds_series.html  sopds_top.html
web_backend/templates/admin/: base.html
web_backend/tests/: test_timezone.py  test_views.py
