[project]
name = "sopds"
version = "0.0.0"
description = "Simple OPDS server"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Dmitrii Safronov", email = "dhameoelin@gmail.com" },
]
dependencies = [
    "Django>=5.2,<5.3",
    "django-constance>=4.2,<5",
    "Pillow>=12.0.0,<13",
    "apscheduler>=3.11.2,<4",
    "lxml>=5.0.0,<7",
    "python-telegram-bot>=20.0,<23",
    "gunicorn>=26.0.0,<27.0.0",
    "whitenoise>=6.9.0,<7.0.0",
    "psycopg[binary]",
    "mysqlclient",
    "pytz==2026.2",
    "tzdata==2026.3",
]

[tool.black]
line-length = 88
include = "\\.pyi?$"

[tool.isort]
profile = "black"
extend_skip_glob = "*/migrations/*.py"

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "htmlcov", "*/migrations/*.py" ]

[tool.mypy]
exclude = "(^tests/|^tests\\.py$|.*/tests/|.*/migrations/|^manage\\.py$)"
plugins = [ "mypy_django_plugin.main" ]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.django-stubs]
django_settings_module = "sopds.settings"

[tool.bandit]
exclude_dirs = [ ".venv", "htmlcov", "tests", "*/migrations/*" ]

[tool.coverage.run]
source = [ "." ]
omit = [
  ".venv/*",
  "tests/*",
  "*/tests/*",
  "*/migrations/*",
  "manage.py",
  "sopds/settings.py",
  "sopds/wsgi.py"
]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "@overload",
  "\\.\\.\\.$",
  "pragma: no cover"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
paths = [ "." ]
exclude = [ ".venv", "htmlcov", "tests/*", "*/tests/*", "*/migrations/*" ]
ignore_names = [ "cls", "owner", "UserType", "db", "obj", "args", "kwargs" ]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sopds.settings"
python_files = [ "test_*.py" ]
addopts = "--strict-markers --cov --cov-report=term-missing"
testpaths = [ "." ]
filterwarnings = [ "ignore::DeprecationWarning" ]

[dependency-groups]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "django-stubs[compatible-mypy]>=5.2,<5.3",
    "bandit",
    "vulture",
    "pre-commit",
    "pip-audit",
    "pytest",
    "pytest-django",
    "pytest-cov",
]
