[project]
name = "sopds"
version = "0.0.0"
description = "Simple OPDS server"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Dmitrii Safronov", email = "dhameoelin@gmail.com" },
]
dependencies = [
    "Django>=5.2,<5.3",
    "django-constance>=4.2,<5",
    "Pillow>=12.0.0,<13",
    "apscheduler>=3.11.2,<4",
    "lxml>=5.0.0,<7",
    "python-telegram-bot>=20.0,<23",
    "gunicorn>=26.0.0,<27.0.0",
    "whitenoise>=6.9.0,<7.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "pytz==2026.2",
    "tzdata==2026.3",
]

[tool.black]
line-length = 88
include = "\\.pyi?$"

[tool.isort]
profile = "black"
extend_skip_glob = "*/migrations/*.py"

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "htmlcov", "*/migrations/*.py" ]

[tool.mypy]
exclude = "(^tests/|^tests\\.py$|.*/tests/|.*/migrations/|^manage\\.py$)"
plugins = [ "mypy_django_plugin.main" ]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "sopds.settings"

[tool.bandit]
exclude_dirs = [ ".venv", "htmlcov", "tests", "*/migrations/*" ]
skips = [
  "B101",  # assert_used: book-processing/legacy code relies on asserts for invariants
  "B110",  # try_except_pass: legacy defensive parsing guards
  "B404",  # subprocess import: used for downloading/converting book files
  "B603",  # subprocess call without shell: book download/convert helpers
  "B405",  # subprocess with shell usage guards
  "B406",  # xml.sax blacklist: parsing book metadata (epub/fb2)
  "B317",  # xml.sax.parse: parsing book metadata
  "B105",  # hardcoded_password_string: false positives on book-provider URLs
  "B608",  # hardcoded_sql_expressions: legacy raw SQL with dict-formatted params
  "B104",  # hardcoded_bind_all_interfaces: dev server command
  "B311",  # standard pseudo-random: non-cryptographic use
]

[tool.coverage.run]
source = [ "." ]
omit = [
  ".venv/*",
  "tests/*",
  "*/tests/*",
  "*/migrations/*",
  "manage.py",
  "sopds/settings.py",
  "sopds/wsgi.py"
]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 0
exclude_lines = [
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "@overload",
  "\\.\\.\\.$",
  "pragma: no cover"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
paths = [ "." ]
exclude = [ ".venv", "htmlcov", "tests/*", "*/tests/*", "*/migrations/*" ]
ignore_names = [ "cls", "owner", "UserType", "db", "obj", "args", "kwargs" ]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sopds.settings"
python_files = [ "test_*.py" ]
addopts = "--strict-markers --cov --cov-report=term-missing"
testpaths = [ "." ]
filterwarnings = [ "ignore::DeprecationWarning" ]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-pyproject>=1.2.3",
    "pytest>=9.1.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.6.0",
    "mypy",
    "django-stubs[compatible-mypy]>=5.2,<5.3",
    "bandit>=1.7.5",
    "pre-commit>=4.6.0",
    "vulture>=2.16",
    "pip-audit>=2.10.1",
]
