[project]
name = "sopds"
version = "1.0.0rc1"
description = "Simple OPDS server"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "Django>=5.2,<5.3",
  "django-constance>=4.2,<5",
  "Pillow>=12.0.0,<13",
  "apscheduler>=3.11.2,<4",
  "lxml>=5.0.0,<7",
  "python-telegram-bot>=20.0,<23",
  "gunicorn>=26.0.0,<27.0.0",
  "whitenoise>=6.9.0,<7.0.0",
  "psycopg2-binary>=2.9.12,<3.0.0",
  "pytz==2026.2",
  "tzdata==2026.3"
]

  [[project.authors]]
  name = "Dmitrii Safronov"
  email = "dhameoelin@gmail.com"

[tool.black]
line-length = 88
include = "\\.pyi?$"

[tool.isort]
profile = "black"
extend_skip_glob = "*/migrations/*.py"

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "htmlcov", "*/migrations/*.py" ]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = ["lxml", "lxml.*", "PIL", "PIL.*", "apscheduler", "apscheduler.*", "telegram", "telegram.*", "psycopg2", "psycopg2.*", "constance", "constance.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "sopds.settings"

[tool.bandit]
exclude_dirs = [ ".venv", "htmlcov", "tests", "*/migrations/*" ]
skips = [
  "B101",
  "B110",
  "B404",
  "B603",
  "B405",
  "B406",
  "B317",
  "B105",
  "B608",
  "B104",
  "B311"
]

[tool.coverage.run]
source = [ "." ]
omit = [
  ".venv/*",
  "tests/*",
  "*/tests/*",
  "*/migrations/*",
  "manage.py",
  "sopds/settings.py",
  "sopds/wsgi.py"
]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 0
exclude_lines = [
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "@overload",
  "\\.\\.\\.$",
  "pragma: no cover"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
paths = [ "." ]
exclude = [ ".venv", "htmlcov", "tests/*", "*/tests/*", "*/migrations/*" ]
ignore_names = [ "cls", "owner", "UserType", "db", "obj", "args", "kwargs" ]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sopds.settings"
python_files = [ "test_*.py" ]
addopts = "--strict-markers --cov --cov-report=term-missing"
testpaths = [ "." ]
filterwarnings = [ "ignore::DeprecationWarning" ]

[dependency-groups]
dev = [
  "black>=26.5.1",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "pytest>=9.1.0",
  "pytest-django>=4.8.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.6.0",
  "mypy",
  "django-stubs[compatible-mypy]>=5.2,<5.3",
  "bandit>=1.7.5",
  "pre-commit>=4.6.0",
  "vulture>=2.16",
  "pip-audit>=2.10.1"
]
